# 8-periodo

redes-II/2024-09-16/: dicas.md
redes-II/2024-09-17/: protocols.md
redes-II/2024-12-16/: Makefile  README.md  docker-compose.yaml
redes-II/2024-12-16/postfix/: Dockerfile  Dockerfile-backup  main.cf  rsyslog.conf  sasl_passwd  supervisord.conf  transport
redes-II/2024-12-16/receiver/: Dockerfile  receive_email.py
redes-II/2024-12-16/sender/: Dockerfile  requirements.txt  send_email.py
redes-II/test3/: Makefile  README.md  docker-compose.yaml
sistemas-inteligentes/: pyproject.toml
sistemas-inteligentes/class/2024-09-11/: clean_robot.py
sistemas-inteligentes/class/2024-09-12/: n_queens.py
sistemas-inteligentes/class/2024-09-18/: Assunto.md
sistemas-inteligentes/class/2024-10-03/: funcs.py
sistemas-inteligentes/class/2024-10-16/: main.ipynb
sistemas-inteligentes/class/2024-10-23/: gradient_descent.ipynb  main.ipynb  pre.ipynb  regressao-simples.ipynb  test1.ipynb  views.ipynb
sistemas-inteligentes/class/2024-11-07/: main.txt
sistemas-inteligentes/class/2024-11-13/: main.ipynb  method.drawio
sistemas-inteligentes/class/2024-11-21/: GLRLM_cyto.csv  a.txt  atividade_avaliativa.docx  main.ipynb  test_xgboost.ipynb  xgboost_model.pkl
sistemas-inteligentes/class/2024-12-11/: dataset.csv  main.ipynb
sistemas-inteligentes/class/2024-12-19/: main.ipynb
sistemas-inteligentes/class/2025-01-09/: main.ipynb  melhor_modelo_mlp.h5  mlp_aula.ipynb  modelo_mlp.h5  modelo_mlp.keras
sistemas-inteligentes/class/helper/: data_preprocessing.ipynb
(+77 files in other folders)
