[tool.poetry]
name = "sistemas-inteligentes"
version = "0.1.0"
description = ""
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
imbalanced-learn = "^0.12.4"
xgboost = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
